plugins {
    id 'idea'
    id 'java-library'
    id 'maven-publish'
    alias libs.plugins.modDevGradleLegacy
    alias libs.plugins.lombok
    alias libs.plugins.spotless
}

version = mod_version

java.toolchain.languageVersion = JavaLanguageVersion.of(17)

sourceSets.main.resources { srcDir 'src/generated/resources' }

apply from: "$rootDir/gradle/scripts/moddevgradle.gradle"
apply from: "$rootDir/gradle/scripts/repositories.gradle"
apply from: "$rootDir/dependencies.gradle"
apply from: "$rootDir/gradle/scripts/resources.gradle"
apply from: "$rootDir/gradle/scripts/jars.gradle"
apply from: "$rootDir/gradle/scripts/spotless.gradle"

generateModMetadata.doFirst {
    mkdir('run/server')
    mkdir('run/data')
}

tasks.withType(JavaCompile).configureEach {
    options.encoding = "UTF-8"
}

lombok {
    version = "1.18.36"
}

jar {
    exclude "**/.cache"
    exclude "**/SimplifiedToTraditional.properties"
}

idea {
    module {
        downloadSources = true
        downloadJavadoc = true
    }
}